--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-next": "13.3.1",
     "mysql2": "^3.4.0",
     "next": "^13.2.4",
+    "next-auth": "^4.22.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zustand": "^4.3.7"
